# FenicsXConcrete

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  conda-lock.yml  environment.yml  pyproject.toml  setup.cfg
.conda/: meta.yaml
.github/actions/install-extra-deps/: action.yml
.github/github/workflows/: push.yml
.github/workflows/: publish_conda  publish_conda.yml  push.yml  push_formatting.yaml  push_tests.yml
docs/: Makefile  conf.py  index.md
docs/api/: fenicsxconcrete.boundary_conditions.rst  fenicsxconcrete.experimental_setup.rst  fenicsxconcrete.finite_element_problem.rst  fenicsxconcrete.rst  fenicsxconcrete.sensor_definition.rst  fenicsxconcrete.util.rst  modules.rst
docs/examples/: 3_point_bending.md  3_point_bending.py  cylinder.py
examples/: README.md  example.py
fenicsxconcrete/: .gitignore  __init__.py  helper.py
fenicsxconcrete/experimental_setup/: README.md  base_experiment.py  bcs.py  cantilever_beam.py  concrete_slab.py  simple_beam.py  steel_beam_experiment.py  tensile_beam.py
fenicsxconcrete/finite_element_problem/: README.md  base_material.py  linear_elastic_material.py  linear_elasticity.py
fenicsxconcrete/sensor_definition/: displacement_sensor.py
src/fenicsxconcrete/: README.md  __init__.py  gaussian_random_field.py  helper.py  unit_registry.py
src/fenicsxconcrete/boundary_conditions/: __init__.py  bcs.py  boundary.py
src/fenicsxconcrete/experimental_setup/: __init__.py  am_multiple_layers.py  base_experiment.py  cantilever_beam.py  compression_cylinder.py  simple_beam.py  simple_cube.py  tensile_beam.py  uniaxial_cube.py
src/fenicsxconcrete/finite_element_problem/: __init__.py  base_material.py  concrete_am.py  concrete_thermo_mechanical.py  linear_elasticity.py  linear_elasticity_grf.py
src/fenicsxconcrete/sensor_definition/: README.md  __init__.py  base_sensor.py  displacement_sensor.py  doh_sensor.py  other_sensor.py  reaction_force_sensor.py  sensor_schema.json  sensor_schema.py  strain_sensor.py  stress_sensor.py  temperature_sensor.py  (+1 more)
tests/: README.md  test_bcs_get_boundary_dofs.py  test_boundary_plane_at.py  test_boundary_point_at.py  test_boundary_within_range.py  test_dirichlet_bcs.py  test_helpers.py
tests/boundary_conditions/: test_bcs_get_boundary_dofs.py  test_boundary_create_facet_tags.py  test_boundary_line_at.py  test_boundary_plane_at.py  test_boundary_point_at.py  test_boundary_show_marked.py  test_boundary_within_range.py  test_dirichlet_bcs.py  test_neumann_bcs.py
tests/experimental_setup/: test_concrete_beam.py  test_experimental_setups.py
tests/finite_element_problem/: _generate_thermo_mechanical_data_fenics_concrete.py  fenics_concrete_thermo_mechanical.npz  test_am_layers.py  test_base_material.py  test_cylinder_model.py  test_default_dictionaries.py  test_hydration_function.py  test_linear_cantilever_beam.py  test_linear_cylinder.py  test_linear_simple_beam.py  test_linear_simple_cube.py  test_linear_tensile_beam.py  test_linear_uniaxial_cube.py  test_thermo_mechanical_cube.py  test_thixotropy_uniaxial.py
tests/sensor_definition/: test_point_sensors.py  test_reaction_force_sensor.py  test_sensor_schema.py  test_sensors.py
tests/util/: test_basic_logging.py  test_homogenization.py
(+6 files in other folders)
