[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name="Jörg F. Unger", email="joerg.unger@bam.de" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "fenics-dolfinx",
  "pint",
  "gmsh",
  "meshio"
]
description = "Implementation of structural problems for concrete structures using FEniCSx"
license = {file = "LICENSE"}
name = "fenicsxconcrete"
readme = "REAMDE.md"
requires-python = ">=3.10"
version = "0.0.5a1"

[project.optional-dependencies]
tests = ["pytest", "coverage", "toml"]

[project.urls]
repository = "https://github.com/BAMresearch/FenicsXConcrete.git"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
